Fix white bar issue on mobile

--- a/client/src/app/projects-section/projects-section.component.scss
+++ b/client/src/app/projects-section/projects-section.component.scss
@@ -1,10 +1,14 @@
 @import "~mixins.scss";
 
 :host {
-    @include section-light;
+	@include section-light;
+
+	@media (max-width: 1100px) {
+		padding-bottom: 0;
+	}
 
     div {
-        display: inline-block;
+		display: inline-block;
 
         h1 {
             font-size: 32px;
@@ -22,7 +26,7 @@
 
                 &:first-child {
                     margin-top: 72px;
-                }
+				}
 
                 &:nth-child(even) {
                     .project-subsection-text {
@@ -113,8 +117,12 @@
                     padding-bottom: 32px;
 
                     &:first-child {
-                        margin-top: 64px;
-                    }
+                        margin-top: 32px;
+					}
+					
+					&:last-child {
+						padding-bottom: $section-padding;
+					}
 
                     &:nth-child(even) {
                         background-color: rgba(0, 0, 0, 0.1);
